k8s-istio/infrastructure/customer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  ports:
  - port: 8081
    targetPort: 8081
  type: NodePort
  selector:
    svc: customer-service
---
